docs/pages/versions/v56.0.0/sdk/calendar.mdx
---
title: 日历
description: 一个提供 API 的库，用于与设备的系统日历、事件、提醒事项及相关记录交互。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-calendar/src'
packageName: 'expo-calendar'
platforms: ['ios*', 'android*']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';

> **重要提示** 为了更快地提供更新，`expo-calendar` 目前不支持在 Expo Go 和 Snack 中使用。要使用它，请创建一个[开发构建](/develop/development-builds/introduction/#how-would-you-like-to-build-your-development-build)。

`expo-calendar` 提供了一个用于与设备系统日历、事件、提醒及相关记录交互的 API。

此外，它还提供了用于启动系统提供的日历 UI 的方法，以便用户查看或编辑事件。在 iOS 上，它们会以模态窗口形式显示 [`EKEventViewController`](https://developer.apple.com/documentation/eventkitui/ekeventviewcontroller) 或 [`EKEventEditViewController`](https://developer.apple.com/documentation/eventkitui/ekeventeditviewcontroller)。

## 安装

<APIInstallSection />

## 在 app 配置中进行配置

如果你在项目中使用配置插件（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），可以使用 `expo-calendar` 内置的[配置插件](/config-plugins/introduction/)进行配置。该插件允许你配置各种无法在运行时设置、且需要构建新的应用二进制文件才会生效的属性。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-calendar",
        {
          "calendarPermission": "应用需要访问你的日历。"
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'calendarPermission',
      platform: 'ios',
      description: '用于设置 [`NSCalendarsUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的日历"',
    },
    {
      name: 'remindersPermission',
      platform: 'ios',
      description: '用于设置 [`NSRemindersUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的提醒事项"',
    },
    {
      name: 'writeOnlyCalendarPermission',
      platform: 'ios',
      description:
        '用于设置 [`NSCalendarsWriteOnlyAccessUsageDescription`](#ios) 权限消息的字符串，在请求仅写入日历访问权限时显示（iOS 17+）。仅在 `writeOnlyAccess` 为 `true` 时使用。',
      default: '"允许 $(PRODUCT_NAME) 将事件添加到你的日历中"',
    },
    {
      name: 'writeOnlyAccess',
      platform: 'ios',
      description:
        '当为 `true` 时，请求仅写入日历访问权限（iOS 17+）。会设置 `NSCalendarsWriteOnlyAccessUsageDescription`，并省略 `NSCalendarsFullAccessUsageDescription`。',
      default: 'false',
    },
  ]}
/>

<ConfigReactNative>

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)）（也就是你在手动使用原生 **ios** 项目），那么你需要在原生项目中配置以下权限：

- 对于 iOS，请将 `NSCalendarsUsageDescription`、`NSCalendarsFullAccessUsageDescription` 和 `NSRemindersUsageDescription` 添加到项目的 **ios/[app]/Info.plist** 中：

  ```xml
  <key>NSCalendarsUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的日历</string>
  <key>NSCalendarsFullAccessUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的日历</string>
  <key>NSRemindersUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的提醒事项</string>
  ```

  当在 iOS 17+ 上请求仅写入日历访问权限时，请添加 `NSCalendarsWriteOnlyAccessUsageDescription`，而不是 `NSCalendarsFullAccessUsageDescription`：

  ```xml
  <key>NSCalendarsWriteOnlyAccessUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 将事件添加到你的日历中</string>
  ```

</ConfigReactNative>

## 用法

```jsx
import * as Calendar from 'expo-calendar';
import { useEffect } from 'react';
import { StyleSheet, View, Text, Button } from 'react-native';

const BasicUsage = () => {
  useEffect(() => {
    (async () => {
      const { status } = await Calendar.requestCalendarPermissions();
      if (status === 'granted') {
        const calendars = Calendar.getCalendars(Calendar.EntityTypes.EVENT);
        console.log('这里是你所有的日历：');
        console.log(JSON.stringify(calendars));
      }
    })();
  }, []);

  return (
    <View style={styles.container}>
      <Text>日历模块示例</Text>
      <Button title="创建一个新日历" onPress={createCalendar} />
    </View>
  );
};

async function createCalendar() {
  const newCalendar = await Calendar.createCalendar({
    title: 'Expo Calendar',
    color: 'blue',
    entityType: Calendar.EntityTypes.EVENT,
  });
  console.log(`你的新日历：${JSON.stringify(newCalendar)}`);
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: '#fff',
    alignItems: 'center',
    justifyContent: 'space-around',
  },
});
```

## API

```js
import * as Calendar from 'expo-calendar';
```

除非另有说明，所有日期都以 ISO 8601 格式返回。

<APISection
  packageName="expo-calendar"
  apiName="Calendar"
  headersMapping={{
    systemProvidedUI: '启动系统提供的日历对话框',
  }}
/>

## 权限

### Android

如果你只打算使用[系统提供的日历 UI](#launching-system-provided-calendar-dialogs)，则不需要请求任何权限。

否则，你必须将以下权限添加到 **app.json** 中 [`expo.android.permissions`](../config/app/#permissions) 数组内。

<AndroidPermissions permissions={['READ_CALENDAR', 'WRITE_CALENDAR']} />

### iOS

如果你只打算使用系统提供的日历 UI 通过 [`createEventInCalendarAsync`](#calendarcreateeventincalendarasynceventdata-presentationoptions) 创建事件，则不需要请求权限。

此库使用以下用途描述键：

<IOSPermissions
  permissions={[
    'NSCalendarsUsageDescription',
    {
      name: 'NSCalendarsFullAccessUsageDescription',
      description:
        '向用户说明应用为何请求对用户日历数据的完全访问权限。',
    },
    {
      name: 'NSCalendarsWriteOnlyAccessUsageDescription',
      description:
        '向用户说明应用为何请求对用户日历数据的仅写入访问权限。',
    },
    'NSRemindersUsageDescription',
  ]}
/>
