docs/pages/versions/v57.0.0/sdk/calendar.mdx
---
title: 日历
description: 一个提供用于与设备的系统日历、事件、提醒和相关记录进行交互的 API 的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-calendar/src'
packageName: 'expo-calendar'
platforms: ['ios*', 'android*']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';

> **重要** 为了更快地提供更新，`expo-calendar` 目前不支持在 Expo Go 和 Snack 中使用。要使用它，请创建一个[开发构建](/develop/development-builds/introduction/#how-would-you-like-to-build-your-development-build)。

`expo-calendar` 提供了一个用于与设备系统日历、事件、提醒事项以及相关记录交互的 API。

此外，它还提供了启动系统提供的日历 UI 的方法，以允许用户查看或编辑事件。在 iOS 上，它们会以模态方式呈现 [`EKEventViewController`](https://developer.apple.com/documentation/eventkitui/ekeventviewcontroller) 或 [`EKEventEditViewController`](https://developer.apple.com/documentation/eventkitui/ekeventeditviewcontroller)。

## 安装

<APIInstallSection />

## 应用配置中的配置

如果你在项目中使用配置插件（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），可以使用 `expo-calendar` 内置的 [config plugin](/config-plugins/introduction/) 进行配置。该插件允许你配置一些无法在运行时设置的属性，这些属性需要重新构建新的应用二进制文件后才会生效。如果你的应用**没有**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-calendar",
        {
          "calendarPermission": "应用需要访问你的日历。"
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'calendarPermission',
      platform: 'ios',
      description: '用于设置 [`NSCalendarsUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的日历"',
    },
    {
      name: 'remindersPermission',
      platform: 'ios',
      description: '用于设置 [`NSRemindersUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的提醒事项"',
    },
    {
      name: 'writeOnlyCalendarPermission',
      platform: 'ios',
      description:
        '用于设置 [`NSCalendarsWriteOnlyAccessUsageDescription`](#ios) 权限消息的字符串，在请求仅写入日历访问权限时显示（iOS 17+）。仅在 `writeOnlyAccess` 为 `true` 时使用。',
      default: '"允许 $(PRODUCT_NAME) 向你的日历添加事件"',
    },
    {
      name: 'writeOnlyAccess',
      platform: 'ios',
      description:
        '当为 `true` 时，请求仅写入日历访问权限（iOS 17+）。会设置 `NSCalendarsWriteOnlyAccessUsageDescription`，并省略 `NSCalendarsFullAccessUsageDescription`。',
      default: 'false',
    },
  ]}
/>

要本地化 iOS 日历或提醒事项权限消息，请将匹配的用途说明键添加到每个[本地化文件](/guides/localization/#translating-app-metadata)中的 `ios` 对象。`calendarPermission` 属性同时设置 `NSCalendarsUsageDescription` 和 `NSCalendarsFullAccessUsageDescription`，而 `remindersPermission` 同时设置 `NSRemindersUsageDescription` 和 `NSRemindersFullAccessUsageDescription`。Expo 会在预构建期间将本地化值写入 **InfoPlist.strings**。

<ConfigReactNative>

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)）（而是手动使用原生 **ios** 项目），那么你需要在原生项目中配置以下权限：

- 对于 iOS，请将 `NSCalendarsUsageDescription`、`NSCalendarsFullAccessUsageDescription` 和 `NSRemindersUsageDescription` 添加到项目的 **ios/[app]/Info.plist** 中：

  ```xml
  <key>NSCalendarsUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的日历</string>
  <key>NSCalendarsFullAccessUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的日历</string>
  <key>NSRemindersUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的提醒事项</string>
  ```

  在 iOS 17+ 上请求仅写入日历访问权限时，请使用 `NSCalendarsWriteOnlyAccessUsageDescription` 代替 `NSCalendarsFullAccessUsageDescription`：

  ```xml
  <key>NSCalendarsWriteOnlyAccessUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 向你的日历添加事件</string>
  ```

</ConfigReactNative>

## 用法

```jsx
import * as Calendar from 'expo-calendar';
import { useEffect } from 'react';
import { StyleSheet, View, Text, Button } from 'react-native';

const BasicUsage = () => {
  useEffect(() => {
    (async () => {
      const { status } = await Calendar.requestCalendarPermissions();
      if (status === 'granted') {
        const calendars = Calendar.getCalendars(Calendar.EntityTypes.EVENT);
        console.log('这里是你所有的日历：');
        console.log(JSON.stringify(calendars));
      }
    })();
  }, []);

  return (
    <View style={styles.container}>
      <Text>日历模块示例</Text>
      <Button title="创建一个新日历" onPress={createCalendar} />
    </View>
  );
};

async function createCalendar() {
  const newCalendar = await Calendar.createCalendar({
    title: 'Expo Calendar',
    color: 'blue',
    entityType: Calendar.EntityTypes.EVENT,
  });
  console.log(`你的新日历：${JSON.stringify(newCalendar)}`);
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: '#fff',
    alignItems: 'center',
    justifyContent: 'space-around',
  },
});
```

## API

```js
import * as Calendar from 'expo-calendar';
```

除非另有说明，所有日期都将以 ISO 8601 格式返回。

<APISection
  packageName="expo-calendar"
  apiName="Calendar"
  headersMapping={{
    systemProvidedUI: '启动系统提供的日历对话框',
  }}
/>

## 权限

### Android

如果你只打算使用系统提供的日历 UI，则无需请求任何权限。

否则，你必须将以下权限添加到你的 **app.json** 中 [`expo.android.permissions`](../config/app/#permissions) 数组里。

<AndroidPermissions permissions={['READ_CALENDAR', 'WRITE_CALENDAR']} />

### iOS

如果只想添加事件而不读取现有日历数据，请在[配置插件](#configuration-in-app-config)中启用 `writeOnlyAccess` 选项，并通过向 [`requestCalendarPermissions`](#calendarrequestcalendarpermissionswriteonly) 传入 `true` 来请求仅写入权限。对于 [`ExpoCalendar.createEvent`](#createeventdetails) 等方法，这样的权限已经足够。读取日历数据的方法（例如 [`getCalendars`](#calendargetcalendarsentitytype)、[`listEvents`](#calendarlisteventscalendars-startdate-enddate) 或 [`presentPicker`](#calendarpresentpicker)）则需要完整的日历访问权限。

本库使用以下用途说明键：

<IOSPermissions
  permissions={[
    'NSCalendarsUsageDescription',
    {
      name: 'NSCalendarsFullAccessUsageDescription',
      description:
        "一条消息，用于告知用户应用为什么请求对用户日历数据的完全访问权限。",
    },
    {
      name: 'NSCalendarsWriteOnlyAccessUsageDescription',
      description:
        "一条消息，用于告知用户应用为什么请求对用户日历数据的仅写入访问权限。",
    },
    'NSRemindersUsageDescription',
  ]}
/>
